// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-divider should render divider with width 300px 1`] = `
<wpp-divider class="wpp-divider" exportparts="body" style="--wpp-divider-width: 300px;">
  <mock:shadow-root>
    <div class="wpp-divider-line" part="body"></div>
  </mock:shadow-root>
</wpp-divider>
`;

exports[`wpp-divider should render vertical divider with height 300px 1`] = `
<wpp-divider class="wpp-divider" exportparts="body" vertical="" style="--wpp-divider-height: 300px;">
  <mock:shadow-root>
    <div class="vertical wpp-divider-line" part="body"></div>
  </mock:shadow-root>
</wpp-divider>
`;
